--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Ethereum graph debugger",
   "main": "dist/run-server.js",
   "scripts": {
-    "build": "$(npm bin)/npm-run-all -s routes-gen tsc",
+    "build": "$(npm bin)/npm-run-all -s routes-gen tsc && webpack --mode production",
     "clean": "$(npm bin)/npm-run-all -p clean:*",
     "clean:dist": "$(npm bin)/rimraf dist",
     "clean:cov": "$(npm bin)/rimraf coverage",
@@ -27,6 +27,8 @@
     "inversify": "^4.13.0",
     "inversify-binding-decorators": "^3.2.0",
     "method-override": "^3.0.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
     "tsoa": "2.1.8",
@@ -34,10 +36,23 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "node-sass": "^4.10.0",
     "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.5.2",
-    "typescript": "^3.1.3"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "typescript": "^3.1.3",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
