Serving index at root

--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
   "description": "Ethereum graph debugger",
   "main": "dist/run-server.js",
   "scripts": {
-    "build": "$(npm bin)/npm-run-all -s routes-gen tsc && webpack --mode production",
+    "build": "$(npm bin)/npm-run-all -s routes-gen tsc copy-index && webpack --mode production",
     "clean": "$(npm bin)/npm-run-all -p clean:*",
     "clean:dist": "$(npm bin)/rimraf dist",
     "clean:cov": "$(npm bin)/rimraf coverage",
     "start": "$(npm bin)/npm-run-all -s clean build start:simple",
     "start:simple": "node ./dist/run-server.js",
     "start:dev": "$(npm bin)/npm-run-all -s clean build -p watch:*",
-    "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch src --delay 2.5 ./dist/run-server.js -e ts",
+    "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 ./dist/run-server.js -e ts",
     "watch:ts": "tsc --watch",
     "tsc": "$(npm bin)/tsc",
+    "copy-index": "copyfiles ./src/index.html ./dist/",
     "routes-gen": "tsoa routes"
   },
   "dependencies": {
     "@types/express": "^4.16.0",
     "async-polling": "^0.2.1",
     "body-parser": "^1.18.3",
+    "copyfiles": "^2.1.0",
     "express": "^4.16.4",
     "express-winston": "^1.4.2",
     "inversify": "^4.13.0",
     "inversify-binding-decorators": "^3.2.0",
     "method-override": "^3.0.0",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
     "tsoa": "2.1.8",
