--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "description": "Ethereum graph debugger",
   "main": "dist/run-server.js",
   "scripts": {
-    "build": "$(npm bin)/npm-run-all -s routes-gen tsc copy-index && webpack --mode production",
+    "build": "$(npm bin)/npm-run-all -s routes-gen tsc copy-index webpack:prod",
     "clean": "$(npm bin)/npm-run-all -p clean:*",
     "clean:dist": "$(npm bin)/rimraf dist",
     "clean:cov": "$(npm bin)/rimraf coverage",
     "start": "$(npm bin)/npm-run-all -s clean build start:simple",
     "start:simple": "node ./dist/run-server.js",
     "start:dev": "$(npm bin)/npm-run-all -s clean build -p watch:*",
-    "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 ./dist/run-server.js -e ts",
+    "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 --exec npm run server-webpack -e ts",
     "watch:ts": "tsc --watch",
     "tsc": "$(npm bin)/tsc",
     "copy-index": "copyfiles ./src/index.html ./dist/",
-    "routes-gen": "tsoa routes"
+    "routes-gen": "tsoa routes",
+    "server-webpack": "$(npm bin)/npm-run-all -s webpack:prod copy-index start:simple",
+    "webpack:prod": "webpack --mode production"
   },
   "dependencies": {
     "@types/express": "^4.16.0",
