--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 --exec npm run server-webpack -e ts",
     "watch:ts": "tsc --watch",
     "tsc": "$(npm bin)/tsc",
-    "copy-index": "copyfiles ./src/index.html ./dist/",
+    "copy-index": "copyfiles ./index.html ./dist/",
     "routes-gen": "tsoa routes",
     "server-webpack": "$(npm bin)/npm-run-all -s webpack:prod copy-index start:simple",
     "webpack:prod": "webpack --mode production"
@@ -31,8 +31,8 @@
     "inversify": "^4.13.0",
     "inversify-binding-decorators": "^3.2.0",
     "method-override": "^3.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
     "tsoa": "2.1.8",
@@ -41,16 +41,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
-    "babel-core": "^6.26.3",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "classnames": "^2.2.6",
+    "css-loader": "^1.0.1",
+    "flow-bin": "^0.86.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "prop-types": "^15.6.2",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
