--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "method-override": "^3.0.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-svg-inline": "^2.1.1",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
     "tsoa": "2.1.8",
@@ -46,13 +47,13 @@
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.1",
-    "flow-bin": "^0.86.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
