--- a/package.json
+++ b/package.json
@@ -70,9 +70,10 @@
     "inversify": "^4.13.0",
     "inversify-binding-decorators": "^3.2.0",
     "method-override": "^3.0.0",
-    "react-svg-inline": "^2.1.1",
     "react": "^16.6.0",
+    "react-ace-editor": "0.0.3",
     "react-dom": "^16.6.0",
+    "react-svg-inline": "^2.1.1",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
