Refactor and prettier

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "start:dev": "$(npm bin)/npm-run-all -s clean build -p watch:*",
     "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 --exec npm run server-webpack -e ts",
     "watch:ts": "tsc --watch",
+    "prettier": "prettier --write 'src/**/*.{ts,json}'",
+    "prettier:check": "prettier --list-different 'src/**/*.{ts,json}'",
     "test": "jest",
     "tsc": "$(npm bin)/tsc",
     "copy-index": "copyfiles ./index.html ./dist/",
@@ -85,6 +87,8 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^23.3.1",
+    "prettier": "^1.14.2",
+    "tslint-config-prettier": "^1.14.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
