--- a/package.json
+++ b/package.json
@@ -88,25 +88,26 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^23.3.1",
-    "prettier": "^1.14.2",
-    "tslint-config-prettier": "^1.14.0",
+    "@types/node": "^10.12.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.1",
+    "jest": "^23.5.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.3",
-    "jest": "^23.5.0",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "typescript": "^3.1.3",
     "ts-jest": "^22.4.6",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "^3.1.3",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
