--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean:dist": "$(npm bin)/rimraf dist",
     "clean:cov": "$(npm bin)/rimraf coverage",
     "start": "$(npm bin)/npm-run-all -s clean build start:simple",
+    "start:test": "webpack-dev-server --progress --mode=development",
     "start:simple": "node ./dist/run-server.js",
     "start:dev": "$(npm bin)/npm-run-all -s clean build -p watch:*",
     "watch:node": "$(npm bin)/nodemon --inspect=0.0.0.0:9229 --watch './src/**/*.*' --delay 2.5 --exec npm run server-webpack -e ts",
@@ -71,7 +72,6 @@
     "inversify-binding-decorators": "^3.2.0",
     "method-override": "^3.0.0",
     "react": "^16.6.0",
-    "react-ace-editor": "0.0.3",
     "react-dom": "^16.6.0",
     "react-svg-inline": "^2.1.1",
     "recursive-readdir": "^2.2.2",
