--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "prettier --write 'src/**/*.{ts,json}'",
     "prettier:check": "prettier --list-different 'src/**/*.{ts,json}'",
     "test": "jest",
+    "test:coverage": "npm run test -- --coverage",
     "tsc": "$(npm bin)/tsc",
     "copy-index": "copyfiles ./index.html ./dist/",
     "routes-gen": "tsoa routes",
