--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "async-polling": "^0.2.1",
     "bn.js": "^4.11.8",
     "body-parser": "^1.18.3",
+    "brace": "^0.11.1",
     "copyfiles": "^2.1.0",
     "ethereumjs-util": "^6.0.0",
     "express": "^4.16.4",
