--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "async-polling": "^0.2.1",
     "bn.js": "^4.11.8",
     "body-parser": "^1.18.3",
+    "brace": "^0.11.1",
     "copyfiles": "^2.1.0",
     "ethereumjs-util": "^6.0.0",
     "express": "^4.16.4",
@@ -76,6 +77,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-svg-inline": "^2.1.1",
+    "react-tabs": "^2.3.0",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
