--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "body-parser": "^1.18.3",
     "brace": "^0.11.1",
     "copyfiles": "^2.1.0",
+    "d3": "^5.7.0",
+    "d3-graphviz": "^2.6.0",
     "ethereumjs-util": "^6.0.0",
     "express": "^4.16.4",
     "express-winston": "^1.4.2",
