add redux environment

--- a/package.json
+++ b/package.json
@@ -78,9 +78,11 @@
     "method-override": "^3.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-redux": "^6.0.0",
     "react-svg-inline": "^2.1.1",
     "react-tabs": "^2.3.0",
     "recursive-readdir": "^2.2.2",
+    "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.12",
     "solc": "^0.4.25",
     "tsoa": "2.1.8",
@@ -106,6 +108,7 @@
     "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "raw-loader": "^0.5.1",
+    "redux": "^4.0.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
