--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "redux": "^4.0.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^22.4.6",
     "tslint-config-prettier": "^1.14.0",
