--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "raw-loader": "^0.5.1",
+    "react-simple-storage": "^1.4.1",
     "redux": "^4.0.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^7.1.0",
